:heavy_plus_sign: feat(Gif Grid and Input Field): cleared input field on success post of gif, and added padding bottom to gif grid top fix gifs between obscured on smaller viewports

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -95,7 +95,7 @@
   grid-gap: 3rem;
   justify-items: center;
   margin: 0 -110px;
-  padding: 45px;
+  padding: 45px 45px 135px 45px;
 }
 
 .gif-grid .gif-item {
